syntax = "proto3";
package Messages; 

enum MessageType {
    HEARTBEAT = 0; 
    QUERYRESULTS = 1; 
    QUERY = 2; 
    PAGEREQUEST = 3;
    PAGERESULT = 4; 
}

message Message {
    string type = 1; 
    oneof SubMessage {
        PageRequest pagerequest = 2;
        QueryResults queryresults = 3; 
        PageResult pageresult = 4;
        Query query = 5; 
    }
}

message PageRequest { 
    string path = 1; 
}

message QueryResults {
    repeated QueryItem results = 1;
    bool append = 2; 
}

message QueryItem {
    string path = 1; 
    string name = 2; 
}

message Review {
    string url = 1; 
    string text = 2; 
    int32 rating = 3; 
    string time = 4; 
    string name = 5; 
}

message PageResult {
    repeated Review reviews = 1; 
    string name = 2; 
}

message Query {
    string query = 1; 
}

